--- a/build-tools/build-infra/src/main/groovy/lucene.root-project.setup.gradle
+++ b/build-tools/build-infra/src/main/groovy/lucene.root-project.setup.gradle
@@ -73,6 +73,11 @@ ext {
 
   // snapshot build marker used in scripts.
   snapshotBuild = luceneVersion.contains("SNAPSHOT")
+
+  // detect if we run in CI environment by looking at existence of env vars:
+  // "CI": Github (https://docs.github.com/en/actions/learn-github-actions/environment-variables)
+  // anything starting with "JENKINS_" or "HUDSON_": Jenkins/Hudson (https://jenkins.thetaphi.de/env-vars.html/)
+  isCIBuild = System.getenv().keySet().find { it ==~ /(?i)((JENKINS|HUDSON)(_\w+)?|CI)/ } != null
 }
 
 //
