--- a/build-options.properties
+++ b/build-options.properties
@@ -1,13 +1,7 @@
 #
 # These are various build options that the Lucene build uses.
-# 
-# Values of these options are read (and can be overridden) by:
 #
-#   - cli parameters to gradlew (system properties): -DoptionKey=value
-#   - cli parameters to gradlew (gradle properties): -PoptionKey=value
-#   - env variables: optionKey=value ./gradlew ...
-#   - non-versioned build-options.local.properties
-#   - versioned defaults in build-options.properties file (this file)
+# PLEASE READ ./gradlew helpLocalSettings
 #
 
 # This is the base Lucene version.
@@ -20,12 +14,3 @@ version.suffix=SNAPSHOT
 # can override it manually to any x.y.z string to set an arbitrary 
 # Lucene version.
 # version.release=
-
-# To see the current values of all other options, run:
-#
-# ./gradlew buildOptions
-#
-# this prints all build options for each project. You can also scope
-# this task to just one project:
-#
-# ./gradlew -p lucene/core buildOptions
