Trying to self-apply validation utilities to build-infra. Spotless can't be applied outside of the project dir so no luck.

--- a/build-tools/build-infra/src/main/groovy/lucene.validation.lockfile.gradle
+++ b/build-tools/build-infra/src/main/groovy/lucene.validation.lockfile.gradle
@@ -23,6 +23,11 @@ import com.carrotsearch.gradle.buildinfra.dependencychecks.DependencyChecksPlugi
 // https://github.com/carrotsearch/gradle-build-infra#plugin-comcarrotsearchgradlebuildinfradependencychecksdependencychecksplugin
 
 allprojects {
+  // We don't care about the build infra deps in the lock file.
+  if (it.path == ":lucene:build-tools:build-infra-shadow") {
+    return
+  }
+
   plugins.apply(DependencyChecksPlugin)
 
   def mainConfigurations = project.configurations.matching {
