--- a/settings.gradle
+++ b/settings.gradle
@@ -86,6 +86,8 @@ include "lucene:suggest"
 include "lucene:test-framework"
 
 include "lucene:build-tools:missing-doclet"
+include "lucene:build-tools:build-infra-shadow"
 
 // tweak the physical path for build-tools.
 project(":lucene:build-tools:missing-doclet").projectDir = file("build-tools/missing-doclet")
+project(":lucene:build-tools:build-infra-shadow").projectDir = file("build-tools/build-infra-shadow")
