Another attempt at the chicken-and-egg application of validation plugins to build-infra.

--- a/build-tools/build-infra-shared/settings.gradle
+++ b/build-tools/build-infra-shared/settings.gradle
@@ -15,11 +15,7 @@
  * limitations under the License.
  */
 
-pluginManagement {
-    includeBuild("../build-infra-shared")
-}
-
-rootProject.name = 'build-infra'
+rootProject.name = 'build-infra-shared'
 
 dependencyResolutionManagement {
     versionCatalogs {
