--- a/build-tools/build-infra-shared/build.gradle
+++ b/build-tools/build-infra-shared/build.gradle
@@ -16,12 +16,10 @@
  */
 
 plugins {
-  id "java-gradle-plugin"
   id "groovy-gradle-plugin"
 
-  id "lucene.all-projects.conventions"
-  id "lucene.check-environment"
-  id "lucene.validation.spotless-java"
+  alias(deps.plugins.spotless) apply false
+  alias(deps.plugins.forbiddenapis) apply false
 }
 
 repositories {
@@ -38,28 +36,14 @@ java {
 
 gradlePlugin {
   automatedPublishing = false
-
-  plugins {
-    buildInfra {
-      id = 'lucene.build-infra'
-      implementationClass = 'org.apache.lucene.gradle.buildinfra.BuildInfraPlugin'
-    }
-  }
 }
 
 dependencies {
   implementation gradleApi()
   implementation localGroovy()
-  implementation deps.commons.codec
-  implementation deps.randomizedtesting.runner
-
-  implementation "com.carrotsearch.gradle.buildinfra:com.carrotsearch.gradle.buildinfra.gradle.plugin:${deps.plugins.carrotsearch.buildinfra.get().version}"
+  implementation "de.thetaphi:forbiddenapis:${deps.plugins.forbiddenapis.get().version}"
+  implementation "com.diffplug.spotless:spotless-plugin-gradle:${deps.plugins.spotless.get().version}"
 }
 
-def hasJavaFlightRecorder = ModuleLayer.boot().findModule('jdk.jfr').map(this.class.module::canRead).orElse(false)
-if (!hasJavaFlightRecorder) {
-  logger.warn('Module jdk.jfr is not available; skipping compilation of Java Flight Recorder support.')
-  tasks.named('compileJava').configure {
-    exclude('**/ProfileResults.java')
-  }
-}
+// Empty placeholders. Chicken and egg self-apply problem.
+tasks.register("tidy") {}
