--- a/settings.gradle
+++ b/settings.gradle
@@ -21,6 +21,7 @@ pluginManagement {
         gradlePluginPortal()
     }
 
+    includeBuild("build-tools/build-infra-shared")
     includeBuild("build-tools/build-infra")
 }
 
