Back to the idea of a shadow project, cheating spotless into thinking its sources are somewhere else.

--- a/build-tools/build-infra/src/main/groovy/lucene.validation.spotless-java.gradle
+++ b/build-tools/build-infra/src/main/groovy/lucene.validation.spotless-java.gradle
@@ -38,6 +38,10 @@ configure(allprojects) { prj ->
 
         // Exclude certain files (generated ones, mostly).
         switch (prj.path) {
+          case ":lucene:build-tools:build-infra-shadow":
+            target = sourceSets.main.allJava.sourceDirectories
+            break
+
           case ":lucene:core":
             targetExclude("**/StandardTokenizerImpl.java")
             break
