Tidy. Include all groovy scripts as well.

--- a/build-tools/build-infra/src/main/groovy/lucene.validation.spotless-groovy.gradle
+++ b/build-tools/build-infra/src/main/groovy/lucene.validation.spotless-groovy.gradle
@@ -32,7 +32,10 @@ spotless.format("gradleScripts", GroovyGradleExtension.class, { ext ->
   ext.leadingTabsToSpaces(2)
   ext.trimTrailingWhitespace()
   ext.endWithNewline()
-  ext.target("build-tools/**/*.gradle")
+  ext.target([
+    "build-tools/**/*.gradle",
+    "build-tools/**/*.groovy"
+  ])
 })
 
 tasks.named("spotlessGradleScripts").configure {
