--- a/build-tools/build-infra/src/main/groovy/lucene.validation.spotless-groovy.gradle
+++ b/build-tools/build-infra/src/main/groovy/lucene.validation.spotless-groovy.gradle
@@ -40,6 +40,7 @@ spotless.format("gradleScripts", GroovyGradleExtension.class, { ext ->
 
 tasks.named("spotlessGradleScripts").configure {
   mustRunAfter ":lucene:build-tools:build-infra-shadow:spotlessJava"
+  mustRunAfter ":lucene:build-tools:missing-doclet:spotlessJava"
 }
 
 tasks.named("tidy").configure {
